# QoA4ML

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.txt  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/: dependabot.yml
.github/workflows/: gh-page-ci.yml  publish.yml  python-ci.yml
docs/: metrics.md
example/bts/bts_client/: LSTM_Prediction_Client.py
example/bts/bts_server/: LSTM_Prediction_Server.py  predictionServerV2.py
example/dataquality/: array_quality_example.py  basic_dataquality.py  image_quality_example.py
example/docker_report/: docker_probe.py
example/malware_detection/cain_version_outdated/client/: build_docker.sh  client.py  conf.json  sim_instance.py
example/malware_detection/cain_version_outdated/server/: Dockerfile  aggregation.py  build_docker.sh  composition.py  detector.py  serve.sh
example/object_detection/cain_version_outdated/: Readme.md  ray_serve.sh
example/object_detection/cain_version_outdated/client/: build_docker.sh  client.py  conf.json
example/object_detection/cain_version_outdated/source/: build_docker.sh  conf.json  deployment.py  readme.md  serve.sh
example/object_detection/cain_version_outdated/worker/: build_docker.sh
example/reports/: README.md  basic_report.py  contract_example.py
example/reports/config/: client.yaml
example/simple/: ensemble_ml.py  general_ml.py
example/simple/observation_demo/: rohe_agent.ipynb
example/simple/observation_demo/config/: observationConfig.yaml
metrics/: index.html
observability/qoa4mlopa/malware_detection/: malware_detection.rego
observability/qoa4mlopa/object_detection/: object_detection.rego
reference/SUMMARY/: index.html
reference/qoa4ml/: index.html
reference/qoa4ml/collector/: index.html
reference/qoa4ml/collector/amqp_collector/: index.html
reference/qoa4ml/collector/base_collector/: index.html
reference/qoa4ml/collector/host_object/: index.html
reference/qoa4ml/config/: index.html
reference/qoa4ml/connector/: index.html
reference/qoa4ml/lang/: index.html
reference/qoa4ml/observability/: index.html
reference/qoa4ml/probes/: index.html
reference/qoa4ml/qoa_client/: index.html
reference/qoa4ml/reports/: index.html
reference/qoa4ml/utils/: index.html
search/: search_index.json
src/qoa4ml/: __init__.py  qoa_client.py
src/qoa4ml/collector/: amqp_collector.py  kafka_collector.py  socket_collector.py
src/qoa4ml/config/: configs.py
src/qoa4ml/connector/: amqp_connector.py  mqtt_connector.py  prom_connector.py  socket_connector.py
src/qoa4ml/lang/: attributes.py  common_models.py  datamodel_enum.py
src/qoa4ml/probes/: docker_monitoring_probe.py  mlquality.py  probe.py  process_monitoring_probe.py  system_monitoring_probe.py
src/qoa4ml/reports/: abstract_report.py  ml_report_model.py  ml_reports.py  resources_report_model.py  rohe_reports.py
src/qoa4ml/utils/: dataquality_utils.py  docker_util.py  gpu_utils.py  qoa_utils.py
tests/: conftest.py  gpu_test.py  test_qoa_client.py
tests/qoaclient_test/: probes_test.py
tests/test_collector/: test_amqp_collector.py  test_socket_collector.py
tests/test_config/: test_configs.py
tests/test_connector/: test_amqp_connector.py  test_debug_connector.py  test_kafka_connector.py  test_prom_connector.py  test_socket_connector.py
tests/test_lang/: test_attributes.py  test_common_models.py  test_datamodel_enum.py
tests/test_observability/: test_embedded_database.py  test_node_aggregator.py
tests/test_probes/: test_docker_probe.py  test_process_probe.py  test_system_probe.py
tests/test_reports/: test_general_report.py  test_ml_reports.py  test_rohe_reports.py
tests/test_utils/: test_qoa_utils.py
(+40 files in other folders)
